--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Buycoins | GitHub Repos</title>
 </head>
 <body>
-    
+    <header class="header">
+        <img src="assets/logo.png" alt="Logo">
+        
+    </header>
+    <div class="container">
+        <aside class="aside"></aside>
+        <main class="main"></main>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
