--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
 <body>
     <header class="header">
         <img src="assets/logo.png" alt="Logo">
-        
+        <div class="search-bar">
+            <input type="text" placeholder="Search or jump to..." class="search">
+            <img src="https://github.githubassets.com/images/search-key-slash.svg" class="search-icon">
+        </div>
+        <ul class="nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Pull requests</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Issues</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Marketplace</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Explore</a>
+            </li>
+        </ul>
+        <div class="buttons">
+            <button class="notification">
+                <img src="assets/alarm.svg" alt="notification">
+            </button>
+            <button class="more">
+                <img src="assets/add.svg" alt="more">
+                <img src="assets/down-arrow.svg" alt="down">
+            </button>
+            <button class="profile">
+                <img src="https://avatars.githubusercontent.com/u/53838340?s=60&v=4" alt="more">
+                <img src="assets/down-arrow.svg" alt="down">
+            </button>
+        </div>
     </header>
     <div class="container">
         <aside class="aside"></aside>
