added profile aside

--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
         </div>
     </header>
     <div class="container">
-        <aside class="aside"></aside>
+        <aside class="aside">
+            <div class="profile-img">
+                <img src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="">
+                <div class="smiley">
+                    <img src="assets/happiness.svg" alt="smiley">
+                </div>
+            </div>
+            <div class="profile-info">
+                <h1>Victor</h1>
+                <h2>CodeVee</h2>
+                <p>Avid Learner</p>
+            </div>
+        </aside>
         <main class="main"></main>
     </div>
     <script src="script.js"></script>
