--- a/index.html
+++ b/index.html
@@ -56,7 +56,34 @@
                 <p>Avid Learner</p>
             </div>
         </aside>
-        <main class="main"></main>
+        <main class="main">
+            <div class="repo-search-bar">
+                <input type="text" placeholder="Find a repository..." class="repo-search">
+            </div>
+            <div class="repos">
+                <div class="repo">
+                    <div class="repo-info">
+                        <h3 class="repo-name">upshift</h3>
+                        <span class="repo-description">Static Page for a Car Rental Service</span>
+                        <div class="repo-detail">
+                            <span class="repo-color"></span>
+                            <small>CSS</small>
+                            <img src="assets/star.svg" alt="star">
+                            <small>20</small>
+                            <svg aria-label="fork" role="img" viewBox="0 0 16 16" version="1.1" data-view-component="true" height="16" width="16" class="svg">
+                                <path fill-rule="evenodd" d="M5 3.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm0 2.122a2.25 2.25 0 10-1.5 0v.878A2.25 2.25 0 005.75 8.5h1.5v2.128a2.251 2.251 0 101.5 0V8.5h1.5a2.25 2.25 0 002.25-2.25v-.878a2.25 2.25 0 10-1.5 0v.878a.75.75 0 01-.75.75h-4.5A.75.75 0 015 6.25v-.878zm3.75 7.378a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm3-8.75a.75.75 0 100-1.5.75.75 0 000 1.5z"></path>
+                            </svg>
+                            <small>9</small>
+                            <small>Updated 24 days ago</small>
+                        </div>
+                    </div>
+                    <button class="repo-star">
+                        <img src="assets/star.svg" alt="star">
+                        Star
+                    </button>
+                </div>
+            </div>
+        </main>
     </div>
     <script src="script.js"></script>
 </body>
