updated alt tag

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <aside class="aside">
             <div class="profile-img">
-                <img src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="">
+                <img src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="User">
                 <div class="smiley">
                     <img src="assets/happiness.svg" alt="smiley">
                 </div>
