--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="assets/down-arrow.svg" alt="down">
             </button>
             <button class="profile">
-                <img src="https://avatars.githubusercontent.com/u/53838340?s=60&v=4" alt="more">
+                <img id="userimgsm" src="https://avatars.githubusercontent.com/u/53838340?s=60&v=4" alt="more">
                 <img src="assets/down-arrow.svg" alt="down">
             </button>
         </div>
@@ -45,22 +45,22 @@
     <div class="container">
         <aside class="aside">
             <div class="profile-img">
-                <img src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="User">
+                <img id="userimg" src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="User">
                 <div class="smiley">
                     <img src="assets/happiness.svg" alt="smiley">
                 </div>
             </div>
             <div class="profile-info">
-                <h1>Victor</h1>
-                <h2>CodeVee</h2>
-                <p>Avid Learner</p>
+                <h1 id="name">Victor</h1>
+                <h2 id="username">CodeVee</h2>
+                <p id="description">Avid Learner</p>
             </div>
         </aside>
         <main class="main">
             <div class="repo-search-bar">
                 <input type="text" placeholder="Find a repository..." class="repo-search">
             </div>
-            <div class="repos">
+            <div id="repos" class="repos">
                 <div class="repo">
                     <div class="repo-info">
                         <h3 class="repo-name">upshift</h3>
