added user retrieval and dom inert

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="assets/down-arrow.svg" alt="down">
             </button>
             <button class="profile">
-                <img id="userimgsm" src="https://avatars.githubusercontent.com/u/53838340?s=60&v=4" alt="more">
+                <img id="avatarsm" src="https://avatars.githubusercontent.com/u/53838340?s=60&v=4" alt="more">
                 <img src="assets/down-arrow.svg" alt="down">
             </button>
         </div>
@@ -45,7 +45,7 @@
     <div class="container">
         <aside class="aside">
             <div class="profile-img">
-                <img id="userimg" src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="User">
+                <img id="avatar" src="https://avatars.githubusercontent.com/u/53838340?v=4" alt="User">
                 <div class="smiley">
                     <img src="assets/happiness.svg" alt="smiley">
                 </div>
