--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header class="header">
+        <button class="hamburger">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </button>
         <img src="assets/logo.png" alt="Logo">
         <div class="search-bar">
             <input type="text" placeholder="Search or jump to..." class="search">
