--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
     <header class="header">
-        <button class="hamburger">
+        <button id="toggle" class="hamburger">
             <span class="line"></span>
             <span class="line"></span>
             <span class="line"></span>
         </button>
         <img src="assets/logo.png" alt="Logo">
-        <div class="search-bar">
+        <div class="search-bar dn">
             <input type="text" placeholder="Search or jump to..." class="search">
             <img src="https://github.githubassets.com/images/search-key-slash.svg" class="search-icon">
         </div>
-        <ul class="nav">
+        <ul class="nav dn">
+            <li class="nav-item hidden">
+                <a href="#" class="nav-link">Dashboard</a>
+            </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Pull requests</a>
             </li>
@@ -31,6 +34,27 @@
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">Explore</a>
+            </li>
+            <li class="nav-item hidden">
+                <a href="#" class="nav-link">Codespaces</a>
+            </li>
+            <li class="nav-item hidden">
+                <a href="#" class="nav-link">Sponsors</a>
+            </li>
+            <li class="nav-item hidden">
+                <a href="#" class="nav-link">Settings</a>
+            </li>
+            <li class="nav-item hidden">
+                <a href="#" class="nav-link">
+                    <img class="nav-img" id="avatarimg" src="https://avatars.githubusercontent.com/u/96519?v=4" alt="more">
+                    <span class="nav-text" id="avatertxt">Me</span>
+                </a>
+            </li>
+            <li class="nav-item hidden">
+                <a href="#" class="nav-link">
+                    <img class="nav-img-sm" src="assets/logout.svg">
+                    Sign Out
+                </a>
             </li>
         </ul>
         <div class="buttons">
