--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <span class="line"></span>
         </button>
         <img src="assets/logo.png" alt="Logo">
-        <div class="search-bar dn">
+        <div class="search-bar db">
             <input type="text" placeholder="Search or jump to..." class="search">
             <img src="https://github.githubassets.com/images/search-key-slash.svg" class="search-icon">
         </div>
-        <ul class="nav dn">
+        <ul class="nav db">
             <li class="nav-item hidden">
                 <a href="#" class="nav-link">Dashboard</a>
             </li>
@@ -47,7 +47,7 @@
             <li class="nav-item hidden">
                 <a href="#" class="nav-link">
                     <img class="nav-img" id="avatarimg" src="https://avatars.githubusercontent.com/u/96519?v=4" alt="more">
-                    <span class="nav-text" id="avatertxt">Me</span>
+                    <span class="nav-text" id="avatartxt"></span>
                 </a>
             </li>
             <li class="nav-item hidden">
@@ -82,8 +82,8 @@
             <div class="profile-info">
                 <h1 id="name"></h1>
                 <h2 id="username"></h2>
-                <p id="description"></p>
             </div>
+            <p class="profile-desc" id="description"></p>
         </aside>
         <main class="main">
             <div class="repo-search-bar">
