--- a/index.html
+++ b/index.html
@@ -71,6 +71,38 @@
             </button>
         </div>
     </header>
+    <div class="tabs">
+        <div class="container">
+            <div class="tabs-profile">
+                <img src="https://avatars.githubusercontent.com/u/96519?v=4" id="tabs-img">
+                <div class="tabs-info">
+                    <span>ireade</span>
+                    <button>Follow</button>
+                </div>
+            </div>
+            <div>
+                <ul class="main-tabs">
+                    <li class="tab">
+                        <img src="">
+                        Overview
+                    </li>
+                    <li class="tab tab-active">
+                        <img src="">
+                        Repositories
+                        <span id="repono">1</span>
+                    </li>
+                    <li class="tab">
+                        <img src="">
+                        Projects
+                    </li>
+                    <li class="tab">
+                        <img src="">
+                        Packages
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <aside class="aside">
             <div class="profile-img">
