--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
             <div class="tabs-profile">
                 <img src="https://avatars.githubusercontent.com/u/96519?v=4" id="tabs-img">
                 <div class="tabs-info">
-                    <span>ireade</span>
+                    <span id="tabs-name"></span>
                     <button>Follow</button>
                 </div>
             </div>
             <div>
                 <ul class="main-tabs">
                     <li class="tab">
-                        <img src="">
+                        <img src="assets/book.svg">
                         Overview
                     </li>
                     <li class="tab tab-active">
-                        <img src="">
+                        <img src="assets/agenda.svg">
                         Repositories
-                        <span id="repono">1</span>
+                        <span id="repo-no">1</span>
                     </li>
                     <li class="tab">
-                        <img src="">
+                        <img src="assets/chalkboard.svg">
                         Projects
                     </li>
                     <li class="tab">
-                        <img src="">
+                        <img src="assets/block.svg">
                         Packages
                     </li>
                 </ul>
