--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </header>
     <div class="tabs">
         <div class="container">
-            <div class="tabs-profile">
+            <div id="tabs-profile" class="tabs-profile">
                 <img src="https://avatars.githubusercontent.com/u/96519?v=4" id="tabs-img">
                 <div class="tabs-info">
                     <span id="tabs-name"></span>
