--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <li class="tab tab-active">
                         <img src="assets/agenda.svg">
                         Repositories
-                        <span id="repo-no">1</span>
+                        <span id="repo-no">0</span>
                     </li>
                     <li class="tab">
                         <img src="assets/chalkboard.svg">
@@ -127,6 +127,27 @@
             <p class="profile-desc" id="description"></p>
         </aside>
         <main class="main">
+            <div class="inner-tabs">
+                <ul class="main-tabs">
+                    <li class="tab">
+                        <img src="assets/book.svg">
+                        Overview
+                    </li>
+                    <li class="tab tab-active">
+                        <img src="assets/agenda.svg">
+                        Repositories
+                        <span id="inner-repo-no">0</span>
+                    </li>
+                    <li class="tab">
+                        <img src="assets/chalkboard.svg">
+                        Projects
+                    </li>
+                    <li class="tab">
+                        <img src="assets/block.svg">
+                        Packages
+                    </li>
+                </ul>
+            </div>
             <div class="repo-search-bar">
                 <input type="text" placeholder="Find a repository..." class="repo-search">
             </div>
