--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@
             <div class="request-wrapper">
                 <form id="form" class="form">
                     <input type="text" class="request-txt" id="request" placeholder="Enter a username">
-                    <button type="submit" class="request-btn" id="submit" disabled="">Find User</button>
-                    <div class="spin"></div>
+                    <button type="submit" class="submit" id="submit" disabled="">
+                        <span class="submit-txt">Find User</span>
+                    </button>
                     <div id="error" class="error"></div>
                 </form>
             </div>       
